--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_image_proof_sreenshots.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_image_proof_sreenshots.xml
@@ -1,24 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:gravity="center"
-    android:layout_height="match_parent">
+    android:padding="10dp"
+    android:background="@color/white"
+    android:orientation="vertical">
 
+    <RelativeLayout
+        android:id="@+id/relativeParent"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:gravity="center">
 
-  <RelativeLayout
-      android:layout_width="400dp"
-      android:gravity="center"
-      android:background="@drawable/article_listing_item_border_bg"
-      android:layout_height="400dp">
+        <ImageView
+            android:id="@+id/imageScreenshot"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginBottom="0dp"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/ic_add_proof" />
 
-<ImageView
-    android:id="@+id/screenshotImageView"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
-    android:src="@drawable/ic_camera" />
+        <RelativeLayout
+            android:layout_width="400dp"
+            android:layout_height="400dp"
+            android:visibility="gone"
+            android:gravity="center">
 
-  </RelativeLayout>
+            <ImageView
+                android:id="@+id/screenshotImageView"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:alpha="0.4"
+                android:tint="#EB3955"
+                app:srcCompat="@drawable/ic_upload_proof_image" />
 
+        </RelativeLayout>
 
+        <ImageView
+            android:id="@+id/imageAcceptDeleteProof"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="10dp" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
