--- a/MyCity4Kids/MyCity4Kids/res/values/dimens.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/dimens.xml
@@ -54,4 +54,10 @@
     <dimen name="space_10">10dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="space_5">5dp</dimen>
+
+    <dimen name="space_15">15dp</dimen>
+    <dimen name="space_7">7dp</dimen>
+    <dimen name="space_30">30dp</dimen>
+    <dimen name="space_6">6dp</dimen>
+    <dimen name="space_25">25dp</dimen>
 </resources>
