--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_detail_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_detail_activity.xml
@@ -5,21 +5,67 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
-        android:id="@+id/scrollView2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/space_30"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:titleTextAppearance="@style/ToolbarTheme.Title">
+
+        <RelativeLayout
+            android:id="@+id/toolbarRelativeLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:visibility="visible">
+
+            <ImageView
+                android:id="@+id/back"
+                android:layout_width="@dimen/space_25"
+                android:layout_height="@dimen/space_18"
+                android:layout_centerVertical="true"
+                android:src="@drawable/back_xxhdpi"
+                android:tint="@color/black" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/toolbarTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="@dimen/space_10"
+                android:layout_marginLeft="@dimen/space_10"
+                android:layout_toEndOf="@id/back"
+                android:layout_toRightOf="@id/back"
+                android:text="CAMPAIGN DETAILS"
+                android:textColor="@color/home.toolbar.titlecolor"
+                android:textSize="20sp"
+                app:fontName="oswald_regular.ttf" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_alignParentBottom="true"
+                android:background="@color/grey_light" />
+        </RelativeLayout>
+    </android.support.v7.widget.Toolbar>
+
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/space_40"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
 
             <ImageView
@@ -30,39 +76,57 @@
                 app:layout_constraintDimensionRatio="16:9"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/default_article" />
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
+            <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="32dp"
-                android:layout_marginRight="32dp"
+                android:layout_marginTop="@dimen/space_20"
+                android:layout_marginEnd="@dimen/space_20"
+                android:layout_marginRight="@dimen/space_20"
+                android:background="@drawable/share_background"
+                android:drawableLeft="@drawable/ic_share_white"
+                android:drawablePadding="@dimen/space_20"
+                android:paddingLeft="@dimen/space_25"
+                android:paddingTop="@dimen/space_10"
+                android:paddingRight="@dimen/space_25"
+                android:paddingBottom="@dimen/space_10"
+                android:text="SHARE"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                app:fontName="oswald.ttf"
                 app:layout_constraintEnd_toEndOf="@+id/header_img"
-                app:layout_constraintTop_toTopOf="@+id/header_img"
-                app:srcCompat="@drawable/share" />
+                app:layout_constraintTop_toTopOf="@+id/header_img" />
 
-            <ImageView
+
+            <com.mikhaellopez.circularimageview.CircularImageView
                 android:id="@+id/brand_img"
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:layout_marginStart="@dimen/space_20"
+                android:layout_marginLeft="@dimen/space_20"
+                android:layout_marginTop="@dimen/space_7"
+                app:civ_border_color="@color/app_red"
+                app:civ_border_width="2dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/header_img" />
+
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/application_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/space_20"
                 android:layout_marginLeft="@dimen/space_20"
-                android:layout_marginTop="@dimen/space_7"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/header_img"
-                app:srcCompat="@drawable/add_bluexxhdpi" />
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginLeft="32dp"
-                android:layout_marginBottom="16dp"
-                android:text="TextView"
+                android:layout_marginBottom="@dimen/space_10"
+                android:paddingLeft="@dimen/space_20"
+                android:paddingTop="5dp"
+                android:paddingRight="@dimen/space_20"
+                android:paddingBottom="5dp"
+                android:textColor="@color/white"
+                android:textSize="10sp"
+                app:fontName="oswald.ttf"
                 app:layout_constraintBottom_toBottomOf="@+id/header_img"
                 app:layout_constraintStart_toStartOf="@+id/header_img" />
 
@@ -98,8 +162,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/space_15"
-                android:layout_marginEnd="@dimen/space_30"
-                android:layout_marginRight="@dimen/space_30"
+                android:layout_marginEnd="@dimen/space_25"
+                android:layout_marginRight="@dimen/space_25"
                 android:text="Earn Upto"
                 android:textSize="11sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -158,15 +222,15 @@
                 android:layout_width="140dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:background="@drawable/rectangular_btn_red_bg"
-                android:backgroundTint="@color/red"
+                android:background="@drawable/campaign_detail_red_bg"
                 android:gravity="center"
                 android:paddingLeft="@dimen/space_20"
                 android:paddingTop="5dp"
                 android:paddingRight="@dimen/space_20"
                 android:paddingBottom="5dp"
-                android:text="10 April 2019"
-                app:fontName="oswald.ttf"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                app:fontName="oswald_regular.ttf"
                 app:layout_constraintEnd_toStartOf="@+id/view5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/start_date" />
@@ -191,14 +255,16 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
-                android:background="@drawable/rectangular_btn_red_bg"
+                android:background="@drawable/campaign_detail_red_bg"
                 android:gravity="center"
                 android:paddingLeft="@dimen/space_20"
                 android:paddingTop="5dp"
                 android:paddingRight="@dimen/space_20"
                 android:paddingBottom="5dp"
                 android:text="Rs. 5000"
-                app:fontName="oswald.ttf"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                app:fontName="oswald_regular.ttf"
                 app:layout_constraintEnd_toEndOf="@+id/view4"
                 app:layout_constraintStart_toEndOf="@+id/view5"
                 app:layout_constraintTop_toBottomOf="@+id/end_date" />
@@ -212,6 +278,7 @@
                 android:layout_marginEnd="@dimen/space_15"
                 android:background="@drawable/read_this_background"
                 android:orientation="vertical"
+                android:padding="@dimen/space_10"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/view5">
@@ -232,7 +299,6 @@
                     android:id="@+id/read_this_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="khkhkskk"
                     android:textColor="@color/campaign.list.buttons"
                     android:textSize="11sp"
                     app:layout_constraintStart_toStartOf="@id/read_this_box" />
@@ -312,19 +378,26 @@
                 app:layout_constraintStart_toStartOf="@id/img"
                 app:layout_constraintTop_toBottomOf="@+id/desc_header" />
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/detail_recyclerview"
+
+            <View
+                android:id="@+id/view_1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/space_15"
-                android:layout_marginLeft="@dimen/space_15"
+                android:layout_height="1dp"
                 android:layout_marginTop="@dimen/space_15"
-                android:layout_marginEnd="@dimen/space_15"
-                android:layout_marginRight="@dimen/space_15"
+                android:background="#E5E5E5"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/desc_text" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/detail_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/view_1" />
 
 
             <com.mycity4kids.widget.CustomFontTextView
@@ -343,7 +416,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/detail_recyclerview"/>
+                app:layout_constraintTop_toBottomOf="@+id/detail_recyclerview" />
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/term_text"
@@ -363,44 +436,75 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/term_header" />
 
-            <CheckBox
-                android:id="@+id/checkbox"
+
+            <View
+                android:id="@+id/view_2"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="@dimen/space_15"
+                android:background="#E5E5E5"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/term_text" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/label_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/space_15"
-                android:layout_marginLeft="@dimen/space_15"
-                android:layout_marginTop="@dimen/space_15"
-                android:layout_marginEnd="@dimen/space_15"
-                android:layout_marginRight="@dimen/space_15"
-                android:layout_marginBottom="@dimen/space_15"
-                android:checked="true"
+                android:background="@drawable/campaign_label_bg"
                 android:gravity="center"
-                android:text="By clicking SUBSCRIBE NOW, you agree to the Terms &amp; Condtions"
+                android:paddingTop="@dimen/space_10"
+                android:paddingBottom="@dimen/space_10"
+                android:textColor="#4A4A4A"
+                app:fontName="open_sans.ttf"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/term_text" />
+                app:layout_constraintTop_toBottomOf="@+id/view_2" />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 
 
-    <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/submit_btn"
+    <RelativeLayout
+        android:id="@+id/bottom_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_20"
         android:background="@drawable/campaign_detail_bottom_btn"
-        android:gravity="center"
-        android:paddingTop="@dimen/space_10"
-        android:paddingBottom="@dimen/space_10"
-        android:text="SUBSCRIBE NOW"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:fontName="oswald_regular.ttf"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent">
 
 
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/applied_tag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/space_25"
+            android:background="@drawable/white_rectangle_gb"
+            android:drawableLeft="@drawable/ic_applied_icon"
+            android:drawablePadding="2dp"
+            android:padding="4dp"
+            android:text="APPLIED"
+            android:textColor="@color/white"
+            android:textSize="8sp"
+            app:fontName="oswald_regular.ttf" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/submit_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
+            android:paddingTop="@dimen/space_10"
+            android:paddingBottom="@dimen/space_10"
+            android:text="SUBSCRIBE NOW"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            app:fontName="oswald_regular.ttf" />
+
+    </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
